# varying-tetris

./: .gitignore  README.md  default.sos  stack.yaml  varying-tetris.cabal
src/: Graphics.hs  Input.hs  Main.hs  Network.hs  Tetris.hs
