name:                varying-tetris
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/schell/varying-tetris#readme
license:             BSD3
license-file:        LICENSE
author:              Schell Scivally
maintainer:          efsubenovex@gmail.com
copyright:           Copyright: (c) 2016 Schell Scivally
category:            Game
build-type:          Simple
extra-source-files:  README.md
data-files:          assets/*.ttf
cabal-version:       >=1.10

executable varying-tetris
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Paths_varying_tetris
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , varying
                     , gelatin
                     , gelatin-gl
                     , gelatin-sdl2
                     , gelatin-freetype2
                     , sdl2
                     , containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/schell/varying-tetris
